# azure-durable-functions

./: README.md  pyproject.toml
azure_func/: function_app.py  requirements.txt
azure_func/activities/: activity1.py  activity2.py
azure_func/http_starters/: http_start.py
azure_func/orchestrator/: orchestrator.py
