[tool.poetry]
name = "azure-durable-decorators"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

# â† disable installing your own code as a package
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4"
azure-functions = ">=1.13.2,<2.0.0"
azure-functions-durable = ">=1.2.2,<2.0.0"
urllib3 = ">=1.26.0,<1.27"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
